[ozone/drm] Correctly (dis)enable ozone/drm/mojo

Fix a typo in
https://chromium-review.googlesource.com/c/chromium/src/+/1142449,that
resulted in over-eager execution of ozone/drm/mojo and hence the
firing of DCHECKs on CrOS in certain configurations.

BUG=867077
TEST=Run with DCHECKs always on.

Change-Id: I239f7927894a9d766d9057f3145e458a0fb2aa6b
Reviewed-on: https://chromium-review.googlesource.com/1152900
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Robert Kroeger <rjkroege@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578658}