ui/base/ui_base_features.cc
@@ -169,7 +169,7 @@ const base::Feature kEnableOzoneDrmMojo = {"OzoneDrmMojo",
 
 bool IsOzoneDrmMojo() {
   return base::FeatureList::IsEnabled(kEnableOzoneDrmMojo) ||
-         IsAshInBrowserProcess();
+         !IsAshInBrowserProcess();
 }
 
 }  // namespace features
